Update LDNetDiagnoService.java